# Raytracing

./: .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: build-documentation.yml  build-pdf.yml  build-web.yml  create-diagram.yml
RT_in_one_weekend/: image.ppm
RT_in_one_weekend/src/: aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant-medium.h  hittable.h  hittable_list.h  integrate_x_sq.cpp  main.cpp  material.h  moving_sphere.h  onb.h  pdf.h  perlin.h  pi.cpp  random.h  ray.h  rtw_stb_image.h  scenes.hpp  sphere.h  sphere_importance.cpp  texture.h  utilities.h  vec3.h
application/: CMakeLists.txt  README.md
application/bin_x64/media/scenes/: cube_no_diffuse.mtl
application/src/: main.cpp
application/vulkan_ray_tracing/: CMakeLists.txt  README.md
application/vulkan_ray_tracing/media/scenes/: README.md  cornell_box_glossy.mtl  cornell_box_iow.mtl  cornell_box_mirror.mtl  cornell_box_saturada.mtl  cornell_box_sphere.mtl  wuson_transparent.mtl
application/vulkan_ray_tracing/src/: CMakeLists.txt  engine.cpp  engine.h  globals.hpp  hello_vulkan.cpp  hello_vulkan.h  main.cpp  scenes.hpp
application/vulkan_ray_tracing/src/shaders/: frag_shader.frag  globals.glsl  gltf.glsl  host_device.h  layouts.glsl  pathtrace.glsl  random.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceShadow.rmiss  raytrace_rahit.glsl  sampling.glsl  wavefront.glsl
docs/: .editorconfig  00-meta.md  Bibliography.bib  ClassicThesis.tex  Makefile  README  README.md  bibliography.bib  classicthesis-config.tex  index.html  style.css
docs/Chapters/: Chapter02.tex  Chapter0A.tex
docs/FrontBackmatter/: Contents.tex
docs/chapters/: 00-dedication.md  00-dedicatoria.md  00-introduccion.md  01-bases.md  01-introduccion.md  01-overview.md  02-bases.md  02-lorem_ipsum.md  02-montecarlo.md  02-notacion.md  02-transporte-luz.md  03-fundamentos.md  03-montecarlo.md  03-radiometria.md  03-raytracing.md  04-montecarlo.md  04-pathtracer.md  04-radiometria.md  05-analisis.md  05-comportamiento-luz.md  05-importance-sampling.md  05-radiometria.md  06-conclusion.md  06-ending.md  06-importance-sampling.md  07-estado-del-arte.md  07-metodologia.md  08-cheat-sheet.md  08-metodologia.md  09-cheat-sheet.md  09-metodologia.md  10-cheat-sheet.md  10-cheatsheet.md  11-ending.md  bibliography.bib
docs/headers/: eisvogel.tex  math.md  meta.md  pdf.md  style.css  web.md
docs/presentation/: presentacion.html  presentacion.rmd  presentation_style.css
utilities/: Diagrama.gantt  Montecarlo_simulation.r  README.md  actions.mmd  afterburner_parser.py  diagrama_clases.mmd  engine.mmd  graficos.ipynb  metodo_inversa.r  metodo_rechazo.r  scenes.mmd
utilities/csv/: CB_esferas_d10_a100_n10_moving.csv  CB_original_1080p.csv  CB_original_1440p.csv  CB_original_720p.csv  CB_original_d10_a100_n05.csv  CB_original_d10_a100_n10.csv  CB_original_d10_a100_n10_moving.csv  CB_original_d10_a100_n15.csv  CB_original_d10_a100_n20.csv  CB_original_d20_a100_n10.csv  CB_original_d50_a100_n10.csv
utilities/logfiles/: CB_esferas_d10_a100_n10_moving.hml  CB_original_1080p.hml  CB_original_1440p.hml  CB_original_720p.hml  CB_original_d10_a100_n05.hml  CB_original_d10_a100_n10.hml  CB_original_d10_a100_n10_moving.hml  CB_original_d10_a100_n15.hml  CB_original_d10_a100_n20.hml  CB_original_d20_a100_n10.hml  CB_original_d50_a100_n10.hml
(+18 files in other folders)
